--- a/Copy_of_עותק_של_Untitled.ipynb
+++ b/Copy_of_עותק_של_Untitled.ipynb
@@ -28,7 +28,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "f95a919a98894f9b86822fa1aa030674": {
+        "23d1ae378da74c5bb726109846ecf63e": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "state": {
@@ -40,15 +40,15 @@
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "box_style": "",
-            "layout": "IPY_MODEL_630c7e7b3c284cb89307ddc01a69586b",
+            "layout": "IPY_MODEL_08e3e363d68743a9bdeb10e32b02ae1e",
             "_model_module": "@jupyter-widgets/controls",
             "children": [
-              "IPY_MODEL_49a32f788564458da3d2aea5e6b5adc3",
-              "IPY_MODEL_93942b2eda624b85bc45b4e1aebf22ba"
+              "IPY_MODEL_2e4053821cdb4a13acfb0545cdcdb4f8",
+              "IPY_MODEL_9a2c7e9ba8074d6a862205c6ea6f114c"
             ]
           }
         },
-        "630c7e7b3c284cb89307ddc01a69586b": {
+        "08e3e363d68743a9bdeb10e32b02ae1e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -99,12 +99,12 @@
             "left": null
           }
         },
-        "49a32f788564458da3d2aea5e6b5adc3": {
+        "2e4053821cdb4a13acfb0545cdcdb4f8": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "state": {
             "_view_name": "ProgressView",
-            "style": "IPY_MODEL_f15f8a98ec004aef89a5601184ab9a51",
+            "style": "IPY_MODEL_51ed035955924245a1877e9855ca8c34",
             "_dom_classes": [],
             "description": "100%",
             "_model_name": "FloatProgressModel",
@@ -119,30 +119,30 @@
             "min": 0,
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_341028ca54864781ace1e77e27060040"
+            "layout": "IPY_MODEL_48f0ff3a0e4146f2a20045d64c7b9eae"
           }
         },
-        "93942b2eda624b85bc45b4e1aebf22ba": {
+        "9a2c7e9ba8074d6a862205c6ea6f114c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "state": {
             "_view_name": "HTMLView",
-            "style": "IPY_MODEL_68de771df2fe4bc3ab36645722d91c26",
+            "style": "IPY_MODEL_434026a9fc204ecc9c8b7d6dc9f0df24",
             "_dom_classes": [],
             "description": "",
             "_model_name": "HTMLModel",
             "placeholder": "​",
             "_view_module": "@jupyter-widgets/controls",
             "_model_module_version": "1.5.0",
-            "value": " 300/300 [49:16&lt;00:00,  9.86s/it]",
+            "value": " 300/300 [08:09&lt;00:00,  1.63s/it]",
             "_view_count": null,
             "_view_module_version": "1.5.0",
             "description_tooltip": null,
             "_model_module": "@jupyter-widgets/controls",
-            "layout": "IPY_MODEL_1d81165582604694b7b7ecc3e12282f5"
+            "layout": "IPY_MODEL_a9d61747856f45109492a432add57c1e"
           }
         },
-        "f15f8a98ec004aef89a5601184ab9a51": {
+        "51ed035955924245a1877e9855ca8c34": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "state": {
@@ -157,7 +157,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "341028ca54864781ace1e77e27060040": {
+        "48f0ff3a0e4146f2a20045d64c7b9eae": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -208,7 +208,7 @@
             "left": null
           }
         },
-        "68de771df2fe4bc3ab36645722d91c26": {
+        "434026a9fc204ecc9c8b7d6dc9f0df24": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "state": {
@@ -222,7 +222,7 @@
             "_model_module": "@jupyter-widgets/controls"
           }
         },
-        "1d81165582604694b7b7ecc3e12282f5": {
+        "a9d61747856f45109492a432add57c1e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "state": {
@@ -339,7 +339,7 @@
         "from tensorflow import keras,summary\n",
         "from keras import layers"
       ],
-      "execution_count": 22,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -349,13 +349,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zp_xbwqcczMZ",
-        "outputId": "cb3196be-256a-4750-b669-89aee93982c9"
+        "outputId": "c402f698-39bb-41ac-bd46-7ad7236749e6"
       },
       "source": [
         "# number of cpu (in kaggle server)\n",
         "!cat /proc/cpuinfo | grep processor"
       ],
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
       "source": [
         "n_cpu = 2 # number of cpu threads to use during batch generation"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1307,7 +1307,7 @@
         "import keras\n",
         "from keras import models, layers"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1375,7 +1375,7 @@
         "EncoderBaseModel = keras.applications.VGG16(include_top=True,input_shape=(224, 224, 3),weights='imagenet')\n",
         "EncoderBaseModel.summary()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1680,7 @@
         "import keras\n",
         "from keras import models, layers"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1714,7 +1714,7 @@
         "autoencoder = keras.Model(input_img, decoded)\n",
         "autoencoder.compile(optimizer='adam', loss='mse', metrics=['accuracy'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2320,18 +2320,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 67,
           "referenced_widgets": [
-            "f95a919a98894f9b86822fa1aa030674",
-            "630c7e7b3c284cb89307ddc01a69586b",
-            "49a32f788564458da3d2aea5e6b5adc3",
-            "93942b2eda624b85bc45b4e1aebf22ba",
-            "f15f8a98ec004aef89a5601184ab9a51",
-            "341028ca54864781ace1e77e27060040",
-            "68de771df2fe4bc3ab36645722d91c26",
-            "1d81165582604694b7b7ecc3e12282f5"
+            "23d1ae378da74c5bb726109846ecf63e",
+            "08e3e363d68743a9bdeb10e32b02ae1e",
+            "2e4053821cdb4a13acfb0545cdcdb4f8",
+            "9a2c7e9ba8074d6a862205c6ea6f114c",
+            "51ed035955924245a1877e9855ca8c34",
+            "48f0ff3a0e4146f2a20045d64c7b9eae",
+            "434026a9fc204ecc9c8b7d6dc9f0df24",
+            "a9d61747856f45109492a432add57c1e"
           ]
         },
         "id": "NDAPtvFgzFAt",
-        "outputId": "d75c674c-ccf6-4dce-cda3-d09a8469602b"
+        "outputId": "aa608adc-5825-4d6c-adb8-6be288378cbb"
       },
       "source": [
         "images = []\n",
@@ -2340,13 +2340,13 @@
         "    images.append(plt.imread(root+'/'+file))\n",
         "images = np.array(images)"
       ],
-      "execution_count": 8,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f95a919a98894f9b86822fa1aa030674",
+              "model_id": "23d1ae378da74c5bb726109846ecf63e",
               "version_minor": 0,
               "version_major": 2
             },
@@ -2374,18 +2374,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oUOAMpWUzp1w",
-        "outputId": "cbd89a05-2741-43db-fd3e-6db1b27c6f9d"
+        "outputId": "bba616d4-f11a-4cf1-fe58-b0967df95290"
       },
       "source": [
-        "#images = images/255\n",
+        "images = images/255\n",
         "print(images[0][0][0][0])"
       ],
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.7686274509803922\n"
+            "0.5568627450980392\n"
           ],
           "name": "stdout"
         }
@@ -2394,42 +2394,56 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gcKfizJHzyKo"
+        "id": "gcKfizJHzyKo",
+        "outputId": "f2bbb545-99af-48d3-d9bb-4c8f234bc35e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#Encoder\n",
         "EncoderBaseModel = keras.applications.VGG16(include_top=False,input_shape=(256, 256, 3),weights='imagenet')"
       ],
-      "execution_count": 26,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "58892288/58889256 [==============================] - 1s 0us/step\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 207
+          "base_uri": "https://localhost:8080/"
         },
         "id": "AMK47_SGl3Fg",
-        "outputId": "4bb14e6a-59bf-40f9-f4d0-9a67a2d9b64c"
+        "outputId": "70258ac2-07df-430e-e5b3-9b1ff30f47bf"
       },
       "source": [
         "#image = preprocess_input(image)\n",
         "# predict the probability across all output classes\n",
-        "yhat = EncoderBaseModel.predict(images)\n"
+        "yhat = EncoderBaseModel.predict(images)\n",
+        "yhat.shape"
       ],
-      "execution_count": 29,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-8e8eeb74afb5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# predict the probability across all output classes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0myhat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEncoderBaseModel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0myhat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object is not callable"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(300, 8, 8, 512)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
         }
       ]
     },
@@ -2440,7 +2454,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vPIyaxGkmiiw",
-        "outputId": "559c9318-0f33-4ae1-de47-e1be3cc349d6"
+        "outputId": "8a5eb3da-5da9-4a49-ed1c-b05dbcf3c884"
       },
       "source": [
         "yhat.shape\n",
@@ -2450,7 +2464,7 @@
         "tsne = TSNE(n_components=2).fit_transform( yhat.reshape(300,-1))\n",
         "tsne.shape\n"
       ],
-      "execution_count": 32,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2462,7 +2476,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 10
         }
       ]
     },
@@ -2472,10 +2486,129 @@
         "id": "kSLHnnHGoIBl"
       },
       "source": [
-        "from sklearn.cluster"
+        "from sklearn.cluster import KMeans\n",
+        "import collections"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aTvBmdi3Ezhh",
+        "outputId": "42dfcef9-6a34-4cd3-bebb-aaf508b3d9a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "kmeans = KMeans(n_clusters=30).fit(tsne)\n",
+        "collections.Counter(kmeans.labels_)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Counter({0: 2,\n",
+              "         1: 16,\n",
+              "         2: 7,\n",
+              "         3: 16,\n",
+              "         4: 6,\n",
+              "         5: 22,\n",
+              "         6: 8,\n",
+              "         7: 10,\n",
+              "         8: 11,\n",
+              "         9: 11,\n",
+              "         10: 15,\n",
+              "         11: 11,\n",
+              "         12: 11,\n",
+              "         13: 14,\n",
+              "         14: 16,\n",
+              "         15: 10,\n",
+              "         16: 17,\n",
+              "         17: 12,\n",
+              "         18: 19,\n",
+              "         19: 6,\n",
+              "         20: 13,\n",
+              "         21: 8,\n",
+              "         22: 6,\n",
+              "         23: 5,\n",
+              "         24: 3,\n",
+              "         25: 2,\n",
+              "         26: 11,\n",
+              "         27: 2,\n",
+              "         28: 4,\n",
+              "         29: 6})"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lmvCLD4SF3lp",
+        "outputId": "55bcc36c-b7fa-4afe-e0b3-145b1067ba27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "select=[]\n",
+        "for i in range (30):\n",
+        "  select.append(np.nonzero(kmeans.labels_ == i)[0][0])\n",
+        "select"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[86,\n",
+              " 16,\n",
+              " 84,\n",
+              " 5,\n",
+              " 63,\n",
+              " 6,\n",
+              " 71,\n",
+              " 98,\n",
+              " 20,\n",
+              " 17,\n",
+              " 3,\n",
+              " 14,\n",
+              " 50,\n",
+              " 9,\n",
+              " 4,\n",
+              " 58,\n",
+              " 10,\n",
+              " 2,\n",
+              " 11,\n",
+              " 1,\n",
+              " 34,\n",
+              " 0,\n",
+              " 23,\n",
+              " 81,\n",
+              " 120,\n",
+              " 88,\n",
+              " 37,\n",
+              " 213,\n",
+              " 35,\n",
+              " 36]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2494,7 +2627,7 @@
         "Encoder = keras.models.Model(inputs=EncoderBaseModel.input, outputs = EncoderBaseModel.get_layer('block2_pool').output)\n",
         "Encoder.summary()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2606,7 +2739,7 @@
         "autoencoder = keras.Model(Encoder.layers[0].input, Decoder)\n",
         "autoencoder.compile(optimizer='adam', loss='mse', metrics=['accuracy'])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2698,7 +2831,7 @@
       "source": [
         "autoencoder.summary()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
