--- a/Copy_of_עותק_של_Untitled.ipynb
+++ b/Copy_of_עותק_של_Untitled.ipynb
@@ -2395,10 +2395,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gcKfizJHzyKo",
-        "outputId": "f2bbb545-99af-48d3-d9bb-4c8f234bc35e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f2bbb545-99af-48d3-d9bb-4c8f234bc35e"
       },
       "source": [
         "#Encoder\n",
@@ -2495,11 +2495,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aTvBmdi3Ezhh",
-        "outputId": "42dfcef9-6a34-4cd3-bebb-aaf508b3d9a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aTvBmdi3Ezhh",
+        "outputId": "42dfcef9-6a34-4cd3-bebb-aaf508b3d9a3"
       },
       "source": [
         "kmeans = KMeans(n_clusters=30).fit(tsne)\n",
@@ -2553,11 +2553,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lmvCLD4SF3lp",
-        "outputId": "55bcc36c-b7fa-4afe-e0b3-145b1067ba27",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lmvCLD4SF3lp",
+        "outputId": "55bcc36c-b7fa-4afe-e0b3-145b1067ba27"
       },
       "source": [
         "select=[]\n",
@@ -2822,6 +2822,122 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "8_dYDQOsVC8t",
+        "outputId": "e7fdbfa3-c3d4-4892-8bb6-638ab35c34c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "pip install pytorch_lightning"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting pytorch_lightning\n",
+            "  Downloading pytorch_lightning-1.4.1-py3-none-any.whl (915 kB)\n",
+            "\u001b[K     |████████████████████████████████| 915 kB 7.6 MB/s \n",
+            "\u001b[?25hCollecting fsspec[http]!=2021.06.0,>=2021.05.0\n",
+            "  Downloading fsspec-2021.7.0-py3-none-any.whl (118 kB)\n",
+            "\u001b[K     |████████████████████████████████| 118 kB 17.8 MB/s \n",
+            "\u001b[?25hCollecting tensorboard!=2.5.0,>=2.2.0\n",
+            "  Downloading tensorboard-2.4.1-py3-none-any.whl (10.6 MB)\n",
+            "\u001b[K     |████████████████████████████████| 10.6 MB 24.4 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: torch>=1.6 in /usr/local/lib/python3.7/dist-packages (from pytorch_lightning) (1.9.0+cu102)\n",
+            "Requirement already satisfied: tqdm>=4.41.0 in /usr/local/lib/python3.7/dist-packages (from pytorch_lightning) (4.41.1)\n",
+            "Collecting future>=0.17.1\n",
+            "  Downloading future-0.18.2.tar.gz (829 kB)\n",
+            "\u001b[K     |████████████████████████████████| 829 kB 59.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from pytorch_lightning) (3.7.4.3)\n",
+            "Collecting pyDeprecate==0.3.1\n",
+            "  Downloading pyDeprecate-0.3.1-py3-none-any.whl (10 kB)\n",
+            "Collecting PyYAML>=5.1\n",
+            "  Downloading PyYAML-5.4.1-cp37-cp37m-manylinux1_x86_64.whl (636 kB)\n",
+            "\u001b[K     |████████████████████████████████| 636 kB 39.3 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: packaging>=17.0 in /usr/local/lib/python3.7/dist-packages (from pytorch_lightning) (21.0)\n",
+            "Requirement already satisfied: numpy>=1.17.2 in /usr/local/lib/python3.7/dist-packages (from pytorch_lightning) (1.19.5)\n",
+            "Collecting torchmetrics>=0.4.0\n",
+            "  Downloading torchmetrics-0.4.1-py3-none-any.whl (234 kB)\n",
+            "\u001b[K     |████████████████████████████████| 234 kB 58.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from fsspec[http]!=2021.06.0,>=2021.05.0->pytorch_lightning) (2.23.0)\n",
+            "Collecting aiohttp\n",
+            "  Downloading aiohttp-3.7.4.post0-cp37-cp37m-manylinux2014_x86_64.whl (1.3 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.3 MB 37.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pyparsing>=2.0.2 in /usr/local/lib/python3.7/dist-packages (from packaging>=17.0->pytorch_lightning) (2.4.7)\n",
+            "Requirement already satisfied: protobuf>=3.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (3.17.3)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (1.15.0)\n",
+            "Requirement already satisfied: grpcio>=1.24.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (1.34.1)\n",
+            "Requirement already satisfied: absl-py>=0.4 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (0.12.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (3.3.4)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (1.0.1)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (0.36.2)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (57.2.0)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (1.8.0)\n",
+            "Requirement already satisfied: google-auth<2,>=1.6.3 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (1.32.1)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.7/dist-packages (from tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (0.4.4)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4 in /usr/local/lib/python3.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (4.7.2)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (0.2.8)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.7/dist-packages (from google-auth<2,>=1.6.3->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (4.2.2)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (1.3.0)\n",
+            "Requirement already satisfied: importlib-metadata in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (4.6.1)\n",
+            "Requirement already satisfied: pyasn1<0.5.0,>=0.4.6 in /usr/local/lib/python3.7/dist-packages (from pyasn1-modules>=0.2.1->google-auth<2,>=1.6.3->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (0.4.8)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch_lightning) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch_lightning) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch_lightning) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch_lightning) (2021.5.30)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (3.1.1)\n",
+            "Collecting async-timeout<4.0,>=3.0\n",
+            "  Downloading async_timeout-3.0.1-py3-none-any.whl (8.2 kB)\n",
+            "Collecting multidict<7.0,>=4.5\n",
+            "  Downloading multidict-5.1.0-cp37-cp37m-manylinux2014_x86_64.whl (142 kB)\n",
+            "\u001b[K     |████████████████████████████████| 142 kB 58.3 MB/s \n",
+            "\u001b[?25hCollecting yarl<2.0,>=1.0\n",
+            "  Downloading yarl-1.6.3-cp37-cp37m-manylinux2014_x86_64.whl (294 kB)\n",
+            "\u001b[K     |████████████████████████████████| 294 kB 54.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.7/dist-packages (from aiohttp->fsspec[http]!=2021.06.0,>=2021.05.0->pytorch_lightning) (21.2.0)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata->markdown>=2.6.8->tensorboard!=2.5.0,>=2.2.0->pytorch_lightning) (3.5.0)\n",
+            "Building wheels for collected packages: future\n",
+            "  Building wheel for future (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for future: filename=future-0.18.2-py3-none-any.whl size=491070 sha256=e7fc7bc6a2f8c3be58e6605a0cb762f6618b66aca61263bab2d117052928ee12\n",
+            "  Stored in directory: /root/.cache/pip/wheels/56/b0/fe/4410d17b32f1f0c3cf54cdfb2bc04d7b4b8f4ae377e2229ba0\n",
+            "Successfully built future\n",
+            "Installing collected packages: multidict, yarl, async-timeout, fsspec, aiohttp, torchmetrics, tensorboard, PyYAML, pyDeprecate, future, pytorch-lightning\n",
+            "  Attempting uninstall: tensorboard\n",
+            "    Found existing installation: tensorboard 2.5.0\n",
+            "    Uninstalling tensorboard-2.5.0:\n",
+            "      Successfully uninstalled tensorboard-2.5.0\n",
+            "  Attempting uninstall: PyYAML\n",
+            "    Found existing installation: PyYAML 3.13\n",
+            "    Uninstalling PyYAML-3.13:\n",
+            "      Successfully uninstalled PyYAML-3.13\n",
+            "  Attempting uninstall: future\n",
+            "    Found existing installation: future 0.16.0\n",
+            "    Uninstalling future-0.16.0:\n",
+            "      Successfully uninstalled future-0.16.0\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "tensorflow 2.5.0 requires tensorboard~=2.5, but you have tensorboard 2.4.1 which is incompatible.\u001b[0m\n",
+            "Successfully installed PyYAML-5.4.1 aiohttp-3.7.4.post0 async-timeout-3.0.1 fsspec-2021.7.0 future-0.18.2 multidict-5.1.0 pyDeprecate-0.3.1 pytorch-lightning-1.4.1 tensorboard-2.4.1 torchmetrics-0.4.1 yarl-1.6.3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TBXC7ZK9VYBf"
+      },
+      "source": [
+        "pip install pl_bolts"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -2852,45 +2968,125 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fS-InfGkNebj"
+        "id": "K-cTEQQPjyK5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 389
+        },
+        "outputId": "7edb708f-aa57-4326-c2cc-8154de1688f8"
       },
       "source": [
-        "# Defining simple method with two arguments, i.e. our image and our model  \n",
-        "def get_features(image,model):  \n",
-        "#choosing specific layer within our VGG-19 model that we are going to extract features from   \n",
-        "# Defining layers dictionary object which contains the specific layers    \n",
-        "  layers={'0':'conv1_1', #Mapping 0 to conv1_1  \n",
-        "          '5':'conv2_1', #Mapping 5 to conv2_1  \n",
-        "          '10':'conv3_1', #Mapping 10 to conv3_1  \n",
-        "          '19':'conv4_1', #Mapping 19 to conv4_1  \n",
-        "          '21':'conv4_2', #Mapping 21 to conv4_2  \n",
-        "          '28':'conv5_1',} #Mapping 28 to conv5_1 \n",
-        "          #Defining an empty dictionary called features to store all the extracted features   \n",
-        "features={}  \n",
-        "  #Running a loop which iterates over all of the layers in our model   \n",
-        "  for name, layer in model._modules.items():   \n",
-        "    #Running our image through the specific layer and store into the new image  \n",
-        "    image=layer(image)  \n",
-        "    #checking the name of the current layer which we are iterating through is inside layers  \n",
-        "    if name in layers:  \n",
-        "      #If true then store the output from that specific layer   \n",
-        "      features[layers[name]]=image   \n",
-        "  #returning feature dictionary   \n",
-        "  return features  "
+        "import pytorch_lightning as pl\n",
+        "from torch import nn\n",
+        "import torch\n",
+        "from pl_bolts.models.autoencoders.components import (\n",
+        "    resnet18_decoder,\n",
+        "    resnet18_encoder,\n",
+        ")\n",
+        "\n",
+        "\n",
+        "class VAE(pl.LightningModule):\n",
+        "    def __init__(self, enc_out_dim=512, latent_dim=256, input_height=32):\n",
+        "        super().__init__()\n",
+        "\n",
+        "        self.save_hyperparameters()\n",
+        "\n",
+        "        # encoder, decoder\n",
+        "        self.encoder = resnet18_encoder(False, False)\n",
+        "        self.decoder = resnet18_decoder(\n",
+        "            latent_dim=latent_dim,\n",
+        "            input_height=input_height,\n",
+        "            first_conv=False,\n",
+        "            maxpool1=False\n",
+        "        )\n",
+        "\n",
+        "        # distribution parameters\n",
+        "        self.fc_mu = nn.Linear(enc_out_dim, latent_dim)\n",
+        "        self.fc_var = nn.Linear(enc_out_dim, latent_dim)\n",
+        "\n",
+        "        # for the gaussian likelihood\n",
+        "        self.log_scale = nn.Parameter(torch.Tensor([0.0]))\n",
+        "\n",
+        "    def configure_optimizers(self):\n",
+        "        return torch.optim.Adam(self.parameters(), lr=1e-4)\n",
+        "\n",
+        "    def gaussian_likelihood(self, x_hat, logscale, x):\n",
+        "        scale = torch.exp(logscale)\n",
+        "        mean = x_hat\n",
+        "        dist = torch.distributions.Normal(mean, scale)\n",
+        "\n",
+        "        # measure prob of seeing image under p(x|z)\n",
+        "        log_pxz = dist.log_prob(x)\n",
+        "        return log_pxz.sum(dim=(1, 2, 3))\n",
+        "\n",
+        "    def kl_divergence(self, z, mu, std):\n",
+        "        # --------------------------\n",
+        "        # Monte carlo KL divergence\n",
+        "        # --------------------------\n",
+        "        # 1. define the first two probabilities (in this case Normal for both)\n",
+        "        p = torch.distributions.Normal(torch.zeros_like(mu), torch.ones_like(std))\n",
+        "        q = torch.distributions.Normal(mu, std)\n",
+        "\n",
+        "        # 2. get the probabilities from the equation\n",
+        "        log_qzx = q.log_prob(z)\n",
+        "        log_pz = p.log_prob(z)\n",
+        "\n",
+        "        # kl\n",
+        "        kl = (log_qzx - log_pz)\n",
+        "        kl = kl.sum(-1)\n",
+        "        return kl\n",
+        "\n",
+        "    def training_step(self, batch, batch_idx):\n",
+        "        x, _ = batch\n",
+        "\n",
+        "        # encode x to get the mu and variance parameters\n",
+        "        x_encoded = self.encoder(x)\n",
+        "        mu, log_var = self.fc_mu(x_encoded), self.fc_var(x_encoded)\n",
+        "\n",
+        "        # sample z from q\n",
+        "        std = torch.exp(log_var / 2)\n",
+        "        q = torch.distributions.Normal(mu, std)\n",
+        "        z = q.rsample()\n",
+        "\n",
+        "        # decoded\n",
+        "        x_hat = self.decoder(z)\n",
+        "\n",
+        "        # reconstruction loss\n",
+        "        recon_loss = self.gaussian_likelihood(x_hat, self.log_scale, x)\n",
+        "\n",
+        "        # kl\n",
+        "        kl = self.kl_divergence(z, mu, std)\n",
+        "\n",
+        "        # elbo\n",
+        "        elbo = (kl - recon_loss)\n",
+        "        elbo = elbo.mean()\n",
+        "\n",
+        "        self.log_dict({\n",
+        "            'elbo': elbo,\n",
+        "            'kl': kl.mean(),\n",
+        "            'recon_loss': recon_loss.mean(),\n",
+        "            'reconstruction': recon_loss.mean(),\n",
+        "            'kl': kl.mean(),\n",
+        "        })\n",
+        "\n",
+        "        return elbo"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "K-cTEQQPjyK5"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-4-002bddd9cea6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m from pl_bolts.models.autoencoders.components import (\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mresnet18_decoder\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mresnet18_encoder\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pl_bolts'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
     }
   ]
 }
