--- a/VGG_imagnet.ipynb
+++ b/VGG_imagnet.ipynb
@@ -7,7 +7,7 @@
       "name": "VGG_imagnet.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNoj7UNaBqYK07/9g+pabHu",
+      "authorship_tag": "ABX9TyPws6CX4aj9yrETwhQwlX41",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,22 +36,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d1pIZ8_TB0g9",
-        "outputId": "b3d5a191-296e-42b6-ba33-a9407df75262"
+        "outputId": "da669602-9ae7-4266-b5ad-47d6e22e8622"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.activity.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fexperimentsandconfigs%20https%3a%2f%2fwww.googleapis.com%2fauth%2fphotos.native&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "4/1AX4XfWi1i2OxrcU0lWfSCGjqf6ICkJ-_7KEFNWG7c5vlaA8oVHY0PFr5MxE\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -84,7 +80,7 @@
         "import warnings\n",
         "from tensorflow import keras,summary\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +97,7 @@
         "\n",
         "#from keras import models, layers,applications\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wynBkqLqCSVZ",
-        "outputId": "89654d47-1e45-4650-de09-f25973384925"
+        "outputId": "e0a34848-8079-43ce-e39e-45a4d96f9ca9"
       },
       "source": [
         "images = []\n",
@@ -120,12 +116,12 @@
         "    images.append(plt.imread(root+'/'+file))\n",
         "images = np.array(images)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 300/300 [01:46<00:00,  2.82it/s]\n"
+            "100%|██████████| 300/300 [00:00<00:00, 413.26it/s]\n"
           ],
           "name": "stderr"
         }
@@ -139,7 +135,7 @@
       "source": [
         "images = images/255"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,12 +145,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "p6j8G5U6OSCz",
-        "outputId": "92eb639f-028d-4531-e94c-9379f3d2ab2c"
+        "outputId": "72d7ce5f-6ace-413b-966a-5058b6df41cb"
       },
       "source": [
         "print(images[0][0][0][0])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m6464ntODT29",
-        "outputId": "1068ea02-509c-49e5-bcb2-c08647c5abc2"
+        "outputId": "d1d21ae1-d452-4d63-aeb8-541c2535617b"
       },
       "source": [
         "\n",
@@ -181,19 +177,16 @@
         "EncoderBaseModel = VGG16(include_top=False,input_shape=(256, 256, 3),weights='imagenet')\n",
         "EncoderBaseModel.summary()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-            "58892288/58889256 [==============================] - 0s 0us/step\n",
-            "58900480/58889256 [==============================] - 0s 0us/step\n",
             "Model: \"vgg16\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_1 (InputLayer)         [(None, 256, 256, 3)]     0         \n",
+            "input_2 (InputLayer)         [(None, 256, 256, 3)]     0         \n",
             "_________________________________________________________________\n",
             "block1_conv1 (Conv2D)        (None, 256, 256, 64)      1792      \n",
             "_________________________________________________________________\n",
@@ -247,13 +240,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9QcKjKf9D0oE",
-        "outputId": "3ba21602-a777-4bbd-a984-967818a740f7"
+        "outputId": "95e81c30-0155-46a2-d9ec-f9c805af1aa6"
       },
       "source": [
         "ImgPred = EncoderBaseModel.predict(images)\n",
         "ImgPred.shape"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,24 +258,36 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 23
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71Pv8KiV5Qsn"
+        "id": "71Pv8KiV5Qsn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "04691106-581b-4c44-fae4-dca59eea995d"
       },
       "source": [
         "from sklearn.manifold import TSNE\n",
         "\n",
         "#tsneAllImages = TSNE(n_components=700).fit_transform( ImgPred.reshape(300,-1))\n",
-        "tsneAllImages = TSNE(n_components=7000,method='exact').fit_transform( ImgPred.reshape(300,-1))\n",
+        "tsneAllImages = TSNE(n_components=700,method='exact').fit_transform( ImgPred.reshape(300,-1))\n",
         "print(tsneAllImages.shape)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(300, 700)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -326,7 +331,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "igHPv_zBh6hI",
-        "outputId": "7e8c3da9-f5fa-46b6-cf4d-d665fc9b9ee2"
+        "outputId": "6e1e4497-7ab7-4356-cfc8-e55be6b20a63"
       },
       "source": [
         "v1=ImgPred[0:30,:,:,:]\n",
@@ -348,7 +353,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 27
         }
       ]
     },
@@ -463,27 +468,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j_NPRcnM_bAX",
-        "outputId": "b2b87c14-b835-43dc-e3f0-f4e3e1b2cd62"
+        "outputId": "72e64ffa-e978-4868-e63a-7f72101ac0c2"
       },
       "source": [
-        "tsneV1_Images=tsneAllImages[0:30,:]\n",
-        "tsneV2_Images=tsneAllImages[30:60,:]\n",
+        "print(tsneAllImages.shape)\n",
+        "tsneV1_Images=tsneAllImages[98:128,:]\n",
+        "tsneV2_Images=tsneAllImages[95:125,:]\n",
+        "selectTSNE=tsneAllImages[90:120,:]\n",
         "\n",
-        "tsneV1_Images.shape"
+        "print(tsneV1_Images.shape)\n",
+        "print(tsneV2_Images.shape)\n",
+        "print(selectTSNE.shape)"
       ],
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(30, 7000)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 44
+          "output_type": "stream",
+          "text": [
+            "(300, 700)\n",
+            "(30, 700)\n",
+            "(30, 700)\n",
+            "(30, 700)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -506,21 +513,60 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6A7B-GL-71ec"
+      },
+      "source": [
+        "minIndexesFid=[ 79 ,233 ,252 ,271 , 33, 181, 162 ,142 , 38 ,288, 198 ,227 ,106, 176 ,288 ,163, 148, 282,\n",
+        " 230 ,127  , 4, 227 ,209 , 33 ,223 , 44 ,243, 222, 259 , 80]\n",
+        "aa=np.asarray(minIndexesFid)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
-          "background_save": true,
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HrCP-Fcx-MoH",
+        "outputId": "7d8958cb-914b-44ba-e2e4-1756c260b75b"
+      },
+      "source": [
+        " TSNEminIndexesFid=tsneAllImages[aa,:]\n",
+        "fid = calculate_fid(tsneAllImages, TSNEminIndexesFid)\n",
+        "print('FID (different): %.3f' % fid)\n",
+        "print(TSNEminIndexesFid.shape)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "FID (different): 122.463\n",
+            "(30, 700)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-T72rYIf7Dj1",
-        "outputId": "eabfa934-3930-4d1d-e4bc-31dd44cd8652"
+        "outputId": "d53db3f7-6de7-4b5c-fe60-a5c41715d85b"
       },
       "source": [
-        "fid = calculate_fid(tsneAllImages, tsneAllImages)\n",
+        "fid = calculate_fid(tsneAllImages, tsneV1_Images)\n",
         "print('FID (same): %.3f' % fid)\n",
         "\n",
-        "fid = calculate_fid(tsneAllImages, tsneV1_Images)\n",
+        "fid = calculate_fid(tsneAllImages, tsneV2_Images)\n",
         "print('FID (different): %.3f' % fid)\n",
         "\n",
-        "fid = calculate_fid(tsneAllImages, tsneV2_Images)\n",
+        "fid = calculate_fid(tsneAllImages, selectTSNE)\n",
         "print('FID (different): %.3f' % fid)"
       ],
       "execution_count": null,
@@ -528,9 +574,45 @@
         {
           "output_type": "stream",
           "text": [
-            "FID (same): -0.002\n",
-            "FID (different): 422.071\n",
-            "FID (different): 411.075\n"
+            "FID (same): 130.240\n",
+            "FID (different): 153.782\n",
+            "FID (different): 161.074\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hRCHVu_v2ZOw",
+        "outputId": "d82826d0-63d3-4117-d0dc-5c37938620f0"
+      },
+      "source": [
+        "#rand 100 vectors of 30 indexs\n",
+        "min=124\n",
+        "for number in range(1000):   \n",
+        "    rndArr=np.random.choice(300, 30)\n",
+        "    selectTSNE=tsneAllImages[rndArr,:]\n",
+        "    fid = calculate_fid(tsneAllImages, selectTSNE)   \n",
+        "    if fid < min:\n",
+        "       print('FID (different): %.3f' % fid)\n",
+        "       min=fid\n",
+        "       minIndx= rndArr\n",
+        "print('Min---FID (different): %.3f' % min)\n",
+        "print(minIndx)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "FID (different): 121.143\n",
+            "FID (different): 119.423\n",
+            "FID (different): 117.635\n"
           ],
           "name": "stdout"
         }
@@ -577,8 +659,8 @@
         "from sklearn.manifold import TSNE\n",
         "\n",
         "\n",
-        "tsne = TSNE(n_components=2).fit_transform( ImgPred.reshape(300,-1))\n",
-        "tsne.shape"
+        "tsneAllImages = TSNE(n_components=2).fit_transform( ImgPred.reshape(300,-1))\n",
+        "tsneAllImages.shape"
       ],
       "execution_count": null,
       "outputs": [
@@ -615,10 +697,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RIZlRWRGEJAQ",
-        "outputId": "6f16d357-7635-4f74-ff81-cf6636f15376"
+        "outputId": "edc5bc23-c249-4e77-b46a-5e10286dfef2"
       },
       "source": [
-        "kmeans = KMeans(n_clusters=30).fit(tsne)\n",
+        "kmeans = KMeans(n_clusters=30).fit(tsneAllImages)\n",
         "collections.Counter(kmeans.labels_)"
       ],
       "execution_count": null,
@@ -627,42 +709,42 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Counter({0: 19,\n",
-              "         1: 11,\n",
-              "         2: 13,\n",
-              "         3: 9,\n",
-              "         4: 7,\n",
-              "         5: 7,\n",
-              "         6: 22,\n",
-              "         7: 7,\n",
-              "         8: 13,\n",
-              "         9: 10,\n",
-              "         10: 7,\n",
-              "         11: 20,\n",
-              "         12: 6,\n",
-              "         13: 4,\n",
-              "         14: 7,\n",
-              "         15: 10,\n",
-              "         16: 5,\n",
-              "         17: 4,\n",
-              "         18: 9,\n",
-              "         19: 8,\n",
-              "         20: 9,\n",
-              "         21: 11,\n",
-              "         22: 14,\n",
-              "         23: 5,\n",
-              "         24: 3,\n",
-              "         25: 14,\n",
-              "         26: 8,\n",
-              "         27: 15,\n",
-              "         28: 11,\n",
-              "         29: 12})"
+              "Counter({0: 1,\n",
+              "         1: 10,\n",
+              "         2: 21,\n",
+              "         3: 2,\n",
+              "         4: 1,\n",
+              "         5: 1,\n",
+              "         6: 83,\n",
+              "         7: 1,\n",
+              "         8: 1,\n",
+              "         9: 1,\n",
+              "         10: 1,\n",
+              "         11: 1,\n",
+              "         12: 1,\n",
+              "         13: 23,\n",
+              "         14: 1,\n",
+              "         15: 1,\n",
+              "         16: 1,\n",
+              "         17: 1,\n",
+              "         18: 1,\n",
+              "         19: 1,\n",
+              "         20: 16,\n",
+              "         21: 19,\n",
+              "         22: 30,\n",
+              "         23: 1,\n",
+              "         24: 1,\n",
+              "         25: 25,\n",
+              "         26: 21,\n",
+              "         27: 17,\n",
+              "         28: 1,\n",
+              "         29: 15})"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 34
         }
       ]
     },
@@ -673,7 +755,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HQ6w5dXZELTl",
-        "outputId": "59af552c-e463-4775-ecc5-36bd78970ae3"
+        "outputId": "444d4924-1885-4602-9f74-3ea2fe639300"
       },
       "source": [
         "select=[]\n",
@@ -687,42 +769,127 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[10,\n",
+              "[113,\n",
+              " 101,\n",
+              " 2,\n",
+              " 150,\n",
+              " 279,\n",
+              " 254,\n",
+              " 3,\n",
+              " 280,\n",
+              " 32,\n",
+              " 95,\n",
+              " 249,\n",
+              " 157,\n",
+              " 234,\n",
+              " 1,\n",
+              " 115,\n",
+              " 285,\n",
+              " 196,\n",
+              " 175,\n",
+              " 220,\n",
+              " 231,\n",
+              " 24,\n",
               " 29,\n",
+              " 0,\n",
+              " 215,\n",
+              " 149,\n",
+              " 4,\n",
               " 9,\n",
               " 7,\n",
-              " 3,\n",
-              " 75,\n",
-              " 4,\n",
-              " 40,\n",
-              " 14,\n",
-              " 57,\n",
-              " 8,\n",
-              " 11,\n",
-              " 32,\n",
-              " 2,\n",
-              " 45,\n",
-              " 41,\n",
-              " 13,\n",
               " 97,\n",
-              " 17,\n",
-              " 6,\n",
-              " 1,\n",
-              " 26,\n",
-              " 27,\n",
-              " 109,\n",
-              " 34,\n",
-              " 0,\n",
-              " 115,\n",
-              " 20,\n",
-              " 15,\n",
-              " 37]"
+              " 22]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qS8yZGbayX4G",
+        "outputId": "51a7834c-9375-4341-c011-677d3901cae1"
+      },
+      "source": [
+        "select"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[113,\n",
+              " 101,\n",
+              " 2,\n",
+              " 150,\n",
+              " 279,\n",
+              " 254,\n",
+              " 3,\n",
+              " 280,\n",
+              " 32,\n",
+              " 95,\n",
+              " 249,\n",
+              " 157,\n",
+              " 234,\n",
+              " 1,\n",
+              " 115,\n",
+              " 285,\n",
+              " 196,\n",
+              " 175,\n",
+              " 220,\n",
+              " 231,\n",
+              " 24,\n",
+              " 29,\n",
+              " 0,\n",
+              " 215,\n",
+              " 149,\n",
+              " 4,\n",
+              " 9,\n",
+              " 7,\n",
+              " 97,\n",
+              " 22]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U2Rn4qSxyunW",
+        "outputId": "82df952f-1376-411f-8615-0dd539ca971b"
+      },
+      "source": [
+        "tsneAllImages[select].shape"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(30, 700)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 138
         }
       ]
     },
