--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -55,17 +55,13 @@
         "import warnings\n",
         "from tensorflow import keras,summary\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wynBkqLqCSVZ",
-        "outputId": "e0a34848-8079-43ce-e39e-45a4d96f9ca9"
+        "id": "wynBkqLqCSVZ"
       },
       "source": [
         "import os\n",
@@ -78,16 +74,8 @@
         "  images = np.array(images)\n",
         "  return images"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "100%|██████████| 300/300 [00:00<00:00, 413.26it/s]\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -139,17 +127,13 @@
         "\tfid = ssdiff + trace(sigma1 + sigma2 - 2.0 * covmean)\n",
         "\treturn fid"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hRCHVu_v2ZOw",
-        "outputId": "d82826d0-63d3-4117-d0dc-5c37938620f0"
+        "id": "hRCHVu_v2ZOw"
       },
       "source": [
         "#rand 100 vectors of 30 indexs\n",
@@ -164,26 +148,15 @@
         "      fid = calculate_fid( AllImages, selectImg1)\n",
         "      if fid < min:\n",
         "        print('FID (temp min): %.3f' % fid)\n",
-        "         print(i)\n",
-        "         min=fid\n",
-        "         minIndx= rndArr\n",
-        "   \n",
+        "        print(number)\n",
+        "        min=fid\n",
+        "        minIndx= rndArr\n",
         "  print('MIN Final---FID : %.3f' % min)\n",
         "  print(minIndx)\n",
         "  return min, minIndx\n"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "FID (different): 121.143\n",
-            "FID (different): 119.423\n",
-            "FID (different): 117.635\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -197,11 +170,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RIZlRWRGEJAQ",
-        "outputId": "edc5bc23-c249-4e77-b46a-5e10286dfef2"
+        "id": "RIZlRWRGEJAQ"
       },
       "source": [
         "from sklearn.cluster import KMeans\n",
@@ -215,50 +184,8 @@
         "    select.append(np.nonzero(kmeans.labels_ == i)[0][0])\n",
         "  return select"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Counter({0: 1,\n",
-              "         1: 10,\n",
-              "         2: 21,\n",
-              "         3: 2,\n",
-              "         4: 1,\n",
-              "         5: 1,\n",
-              "         6: 83,\n",
-              "         7: 1,\n",
-              "         8: 1,\n",
-              "         9: 1,\n",
-              "         10: 1,\n",
-              "         11: 1,\n",
-              "         12: 1,\n",
-              "         13: 23,\n",
-              "         14: 1,\n",
-              "         15: 1,\n",
-              "         16: 1,\n",
-              "         17: 1,\n",
-              "         18: 1,\n",
-              "         19: 1,\n",
-              "         20: 16,\n",
-              "         21: 19,\n",
-              "         22: 30,\n",
-              "         23: 1,\n",
-              "         24: 1,\n",
-              "         25: 25,\n",
-              "         26: 21,\n",
-              "         27: 17,\n",
-              "         28: 1,\n",
-              "         29: 15})"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 34
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     }
   ]
 }
