--- a/VGG_MIN_FID_FINAL.ipynb
+++ b/VGG_MIN_FID_FINAL.ipynb
@@ -34,10 +34,10 @@
         "id": "nwzDcTQ2ct-N"
       },
       "source": [
-        "1. FEATURES EXTRACTION USING VGG-16                   \n",
-        "2. DIMENSION REDUCTION BY TSNE\n",
-        "3. CLUSTERING BY K-MEANS ALGORITHM  \n",
-        "4. TAKING  A REPRESENTATIVE FROM EACH GROUP ,  TO TAKE  30 VARIED PHOTOS\n",
+        "1. FEATURES EXTRACTION USING VGG-16\n",
+        "2. DIMENSION REDUCTION BY TSNE                   \n",
+        "3. CALCULATE **FID**(Frechet Inception Distance) FOR RANDOMALLY VECTORS OF INDEXES \n",
+        "4. SELECT THE INDEXES THAT RECEIVED THE LOWEST FID \n",
         "\n",
         "\n"
       ]
@@ -51,7 +51,7 @@
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "#from Functions import Load_images \n",
         "import Functions"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -110,17 +110,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wynBkqLqCSVZ",
-        "outputId": "672d7441-199f-447d-db63-0aefe5c378d7"
+        "outputId": "d38bd046-840c-4e36-8463-0e9e28d8de34"
       },
       "source": [
         "images = Functions.Load_images()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "100%|██████████| 300/300 [00:00<00:00, 485.50it/s]\n"
+            "100%|██████████| 300/300 [00:00<00:00, 749.26it/s]\n"
           ],
           "name": "stderr"
         }
@@ -133,13 +133,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c83a076e-bba6-42ca-a236-2a5bbfbe6ac2"
+        "outputId": "9150dd78-fd9d-464b-c20e-bab141d36864"
       },
       "source": [
         "images = images/255\n",
         "print(images[0][0][0][0])"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,23 +166,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m6464ntODT29",
-        "outputId": "a78f982d-4832-4f17-eb93-9f18af995a06"
+        "outputId": "78b3b46a-3c92-48be-ddc0-3b1bb8598ec4"
       },
       "source": [
         "#Featers Extraction by VGG Network -without fully connected layer(include_top=False)\n",
         "ModelVGG16 = VGG16(include_top=False,input_shape=(256, 256, 3),weights='imagenet')\n",
         "ModelVGG16.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/vgg16/vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
+            "58892288/58889256 [==============================] - 0s 0us/step\n",
+            "58900480/58889256 [==============================] - 0s 0us/step\n",
             "Model: \"vgg16\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "input_2 (InputLayer)         [(None, 256, 256, 3)]     0         \n",
+            "input_1 (InputLayer)         [(None, 256, 256, 3)]     0         \n",
             "_________________________________________________________________\n",
             "block1_conv1 (Conv2D)        (None, 256, 256, 64)      1792      \n",
             "_________________________________________________________________\n",
@@ -236,13 +239,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9QcKjKf9D0oE",
-        "outputId": "824938df-4769-4f23-c879-8580bd1777af"
+        "outputId": "9fca1e01-ab6e-4803-947f-623d22a47c64"
       },
       "source": [
         "ImgPred = ModelVGG16.predict(images)\n",
         "ImgPred.shape"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,40 +257,38 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VuxA3_BadHBg"
+        "id": "jy2jeolU38sO"
       },
       "source": [
-        "\n",
         "DIMENSION REDUCTION BY TSNE"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "71Pv8KiV5Qsn",
+        "id": "7Q_IUzmf39Zd",
+        "outputId": "6ebe15a1-bdf3-4fc9-8d07-d043c9c8dc00",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7fec0150-808e-4446-9e17-69a2677f4691"
+        }
       },
       "source": [
-        "\n",
         "tsneAllImages = TSNE(n_components=700,method='exact').fit_transform( ImgPred.reshape(300,-1))\n",
         "print(tsneAllImages.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(300, 2048)\n"
+            "(300, 700)\n"
           ],
           "name": "stdout"
         }
@@ -296,103 +297,54 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zuoyhN_8iCwv"
+        "id": "DlQKFvmc5oCq"
       },
       "source": [
-        "CLUSTERING BY K-MEANS ALGORITHM"
+        "* CALCULATE **FID** (Frechet Inception Distance) FOR RANDOMALLY VECTORS OF INDEXES \n",
+        "* SELECT THE INDEXES THAT RECEIVED THE LOWEST FID "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "O5WM0K0q1-iI",
+        "outputId": "fd2e6028-f401-48b0-aa34-5a024528f6f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "RIZlRWRGEJAQ",
-        "outputId": "3e4ec41a-8554-42f1-de65-0706648757c7"
-      },
-      "source": [
-        "kmeans = KMeans(n_clusters=30).fit(tsneAllImages)\n",
-        "collections.Counter(kmeans.labels_)\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Counter({0: 101,\n",
-              "         1: 1,\n",
-              "         2: 1,\n",
-              "         3: 1,\n",
-              "         4: 1,\n",
-              "         5: 1,\n",
-              "         6: 1,\n",
-              "         7: 1,\n",
-              "         8: 1,\n",
-              "         9: 1,\n",
-              "         10: 1,\n",
-              "         11: 1,\n",
-              "         12: 1,\n",
-              "         13: 1,\n",
-              "         14: 1,\n",
-              "         15: 37,\n",
-              "         16: 1,\n",
-              "         17: 1,\n",
-              "         18: 1,\n",
-              "         19: 1,\n",
-              "         20: 1,\n",
-              "         21: 40,\n",
-              "         22: 1,\n",
-              "         23: 1,\n",
-              "         24: 1,\n",
-              "         25: 1,\n",
-              "         26: 1,\n",
-              "         27: 1,\n",
-              "         28: 50,\n",
-              "         29: 47})"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 17
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8IylEH3GhdGE"
       },
       "source": [
-        "\n",
-        "TAKING  A REPRESENTATIVE FROM EACH GROUP ,  TO TAKE  30 VARIED PHOTOS"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HQ6w5dXZELTl",
-        "outputId": "c369e487-7c44-4623-a2d7-58d5f19d330c"
-      },
-      "source": [
-        "indexes_fromeach_cluster=[]\n",
-        "for i in range (30):\n",
-        "  indexes_fromeach_cluster.append(np.nonzero(kmeans.labels_ == i)[0][0])\n",
-        "print(\"The selected Indexes are:\")\n",
-        "print(indexes_fromeach_cluster)"
+        "min_fid,indexes_with_min_fid= Functions.Find_indexes_whith_min_Fid_from_random_vectors(tsneAllImages,10)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The selected Indexes are:\n",
-            "[2, 275, 215, 217, 222, 47, 295, 155, 221, 209, 189, 51, 270, 78, 59, 10, 242, 273, 76, 149, 230, 9, 125, 268, 121, 191, 18, 133, 1, 0]\n"
+            "FID (temp min): 611.118\n",
+            "0\n",
+            "[221  34 191 282 177 176 132 223 152 257   8 152 144  33  70  55 287  39\n",
+            " 268 254 159 170 271  32 217 274 264 227  92 234]\n",
+            "FID (temp min): 543.388\n",
+            "1\n",
+            "[269 183 107 213  25 271  44 198 100  32  79 169 194 281 290 278  37  23\n",
+            " 248  71  27 250 122 138  20 281 290  62 266 264]\n",
+            "FID (temp min): 307.058\n",
+            "2\n",
+            "[114  15  72 225 201 183 175 143 265  79 206  74  19  24 244 188 278 249\n",
+            " 278 221 258  94 275 253  36  10   1   6 254  40]\n",
+            "FID (temp min): 298.170\n",
+            "7\n",
+            "[190 243  26 249 239  26  85  40  34 277 106 125 117  97 181  39 256  82\n",
+            "  96 105 226 292 182  28 172 246  35  79 218 147]\n",
+            "FID (temp min): 252.477\n",
+            "8\n",
+            "[ 94  56 168   6 246 288 135 195  86 269 219  52 244 186  43 238 104  75\n",
+            " 242 160  96 184 210 143 268  31  80 157 114 235]\n",
+            "MIN Final---FID : 252.477\n",
+            "The Selected Indexes Are: \n",
+            "[ 94  56 168   6 246 288 135 195  86 269 219  52 244 186  43 238 104  75\n",
+            " 242 160  96 184 210 143 268  31  80 157 114 235]\n"
           ],
           "name": "stdout"
         }
