AUTO_ENCODER_TSNE_MIN_FID_FINAL

--- a/AUTO_ENCODER_TSNE_MIN_FID_FINAL.ipynb
+++ b/AUTO_ENCODER_TSNE_MIN_FID_FINAL.ipynb
@@ -51,7 +51,7 @@
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "#from Functions import Load_images \n",
         "import Functions"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
       "source": [
         "images = Functions.Load_images()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "images = images/255\n",
         "print(images[0][0][0][0])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,6 +162,69 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qASDVnFUBKyr"
+      },
+      "source": [
+        "input_img = keras.Input(shape=(256, 256, 3))\n",
+        "\n",
+        "x = layers.Conv2D(64, (3, 3), activation='relu', padding='same')(input_img)\n",
+        "x = layers.Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.MaxPooling2D((2, 2), padding='same')(x)\n",
+        "x = layers.Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.MaxPooling2D((2, 2), padding='same')(x)\n",
+        "x = layers.Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.MaxPooling2D((2, 2), padding='same')(x)\n",
+        "x = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(x)\n",
+        "encoded = layers.MaxPooling2D((2, 2), padding='same')(x)\n",
+        "\n",
+        "\n",
+        "x = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(encoded)\n",
+        "x = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(512, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.UpSampling2D((2, 2))(x)\n",
+        "x = layers.Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(256, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.UpSampling2D((2, 2))(x)\n",
+        "x = layers.Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(128, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.UpSampling2D((2, 2))(x)\n",
+        "x = layers.Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(64, (3, 3), activation='relu', padding='same')(x)\n",
+        "x = layers.UpSampling2D((2, 2))(x)\n",
+        "decoded = layers.Conv2D(3, (3, 3), activation='relu', padding='same')(x)\n",
+        "\n",
+        "autoencoder = keras.Model(input_img, decoded)\n",
+        "autoencoder.compile(optimizer='adam', loss='mse', metrics=['accuracy'])\n",
+        "\n",
+        "autoencoder.summary()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KYd6MnOFBVKq"
+      },
+      "source": [
+        "\n",
+        "autoencoder.fit(images, images,\n",
+        "                epochs=10,\n",
+        "                batch_size=1,\n",
+        "                shuffle=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
@@ -173,7 +236,7 @@
         "ModelVGG16 = VGG16(include_top=False,input_shape=(256, 256, 3),weights='imagenet')\n",
         "ModelVGG16.summary()"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,7 +305,7 @@
         "ImgPred = ModelVGG16.predict(images)\n",
         "ImgPred.shape"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +343,7 @@
         "tsneAllImages = TSNE(n_components=700,method='exact').fit_transform( ImgPred.reshape(300,-1))\n",
         "print(tsneAllImages.shape)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -313,7 +376,7 @@
       "source": [
         "min_fid,indexes_with_min_fid= Functions.Find_indexes_whith_min_Fid_from_random_vectors(tsneAllImages,10)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
